[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/Area/DefaultArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_script/battle/UI/AnimationUB.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="UB_Animation" type="Node2D"]
script = ExtResource( 3 )

[node name="D_Area" parent="." instance=ExtResource( 1 )]
position = Vector2( -70, 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
